Datos nuevos parciales en la base de datos

--- a/baseball/database/Makefile
+++ b/baseball/database/Makefile
@@ -1,24 +1,25 @@
-setup:
-	psql -f setup.sql
+all: create schema load perm
 
-delete:
-	psql -f delete.sql "Baseball"
-
-truncate:
-	psql -f truncate.sql "Baseball"
-
-drop:
-	psql -f drop.sql "Baseball"
-
-load:
-	psql -f load.sql "Baseball"
-
-perms:
-	psql -f perms.sql "Baseball"
-
-sample:
-	psql -f sample.sql "Baseball"
+create:
+	psql -f create.sql
 
 schema:
 	psql -f schema.sql "Baseball"
 
+load:
+	psql -f load.sql "Baseball"
+
+sample:
+	psql -f sample.sql "Baseball"
+
+perm:
+	psql -f perm.sql "Baseball"
+
+truncate:
+	psql -f truncate.sql "Baseball"
+
+delete:
+	psql -f delete.sql "Baseball"
+
+distclean:
+	psql -f distclean.sql
