--- a/projects/TriplePlay/webroot/.htaccess
+++ b/projects/TriplePlay/webroot/.htaccess
@@ -3,6 +3,11 @@
         Deny from all
 </Files>
 
+<Files dbconn.php>
+        Order Allow, Deny
+        Deny from all
+</Files>
+
 <Files password.php>
         Order Allow, Deny
         Deny from all
