--- a/projects/Fantasy/webroot/.htaccess
+++ b/projects/Fantasy/webroot/.htaccess
@@ -1,14 +1,4 @@
 <Files .htaccess>
-        Order Allow, Deny
-        Deny from all
-</Files>
-
-<Files dbconn.php>
-        Order Allow, Deny
-        Deny from all
-</Files>
-
-<Files password.php>
-        Order Allow, Deny
+        Order allow,deny
         Deny from all
 </Files>
