Manejo de sesiones parcialmente integrado.
Falta hacer login y registro.  Hay que decidir cómo se va a hacer el
registro de administradores...

--- a/projects/Fantasy/database/perms/Makefile
+++ b/projects/Fantasy/database/perms/Makefile
@@ -4,7 +4,10 @@ DATABASE=Fantasy
 
 .PHONY: all user admin auth
 
-all: user admin auth
+all: guest user admin auth
+
+guest:
+	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f guest.sql
 
 user:
 	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f user.sql
