Mejoras a la base de datos
Ahora psql se corre con opciones para que funcione mejor, imprima menos
información de poca utilidad, detenga la ejecución en el primer error, y
otras cosas útiles.

Hubo un cambio importante en el setup de PostgreSQL: se quitan los
permisos que vienen por defecto (al menos en Ubuntu) para todas las
bases de datos y todos los usuarios.  Ahora un usuario solo podrá
conectarse a una base de datos si es superusuario o se le da permiso
explícitamente.  Antes los permisos de conexión eran redundantes.  Oops.

También metí todos los tipos de la base de datos del Fantasy en el
schema.  Excepto "password" (que no es exactamente un tipo) porque
habría que cambiar muchas cosas en "password.sql".  Maybe later.

--- a/projects/Fantasy/database/Makefile
+++ b/projects/Fantasy/database/Makefile
@@ -1,58 +1,58 @@
-SQL=psql
-SQLOPTS=--quiet
+SQL=PGOPTIONS='--client-min-messages=warning' psql
+SQLOPTS=--quiet --variable=ON_ERROR_STOP=1 --pset pager=off
 DATABASE=Fantasy
 
-.PHONY: all database include language password types schema tables functions triggers load sample roles perms truncate truncate-sample drop-tables distclean
+.PHONY: all database include language password schema types tables functions triggers load sample roles perms truncate truncate-sample drop-tables distclean
 
-all: database include language password types schema tables functions triggers load roles perms sample
+all: database include language password schema types tables functions triggers load roles perms sample
 
 database:
-	createdb -E UTF-8 "$(DATABASE)"
+	createdb -E UTF-8 '$(DATABASE)'
 
 include:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f /usr/share/postgresql/8.4/contrib/pgcrypto.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f /usr/share/postgresql/8.4/contrib/pgcrypto.sql
 
 language:
-	createlang -d "$(DATABASE)" plpgsql
+	createlang -d '$(DATABASE)' plpgsql
 
 password:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f password.sql
-
-types:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f types.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f password.sql
 
 schema:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f schema.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f schema.sql
+
+types:
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f types.sql
 
 tables:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f tables.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f tables.sql
 
 functions:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f functions.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f functions.sql
 
 triggers:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f triggers.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f triggers.sql
 
 load:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f load.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f load.sql
 
 sample:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f sample.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f sample.sql
 
 roles:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f roles.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f roles.sql
 
 perms:
 	$(MAKE) -C perms all
 
 truncate:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f truncate.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f truncate.sql
 
 truncate-sample:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f truncate-sample.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f truncate-sample.sql
 
 drop-tables:
-	"$(SQL)" $(SQLOPTS) -d "$(DATABASE)" -f drop-tables.sql
+	$(SQL) $(SQLOPTS) -d '$(DATABASE)' -f drop-tables.sql
 
 distclean:
-	"$(SQL)" $(SQLOPTS)               -f distclean.sql
+	$(SQL) $(SQLOPTS)                  -f distclean.sql
